# monitor_esp32

./: .replit  platformio.ini
attached_assets/: Pasted--1--1750091070978_1750091070979.txt  Pasted--define-LCD-W-320-define-LCD-H-480-void-LCD-RESET-void-LCD-RST-CLR-delay-ms-100--1750092715060_1750092715060.txt  Pasted-Executing-task-in-folder-monitor-esp32-C-Users-vpapu-platformio-penv-Scripts-platformio-exe-devic-1750092520875_1750092520876.txt
old sketch/: CMakeLists.txt  User_Setup.h  filelist.txt  lv_conf.h  sketch_jun7a.ino  touch_pen.ino  ui.c  ui.h  ui_Screen1.c  ui_Screen_Settings.c  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_progress.c  ui_comp_progress.h  ui_events.c  ui_events.h  ui_font_Arial_110.c  ui_helpers.c  ui_helpers.h
src/: lv_conf.h  main.cpp
